# minigamepad

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO  build.lua  compile_flags.txt  minigamepad.dsp  minigamepad.dsw  minigamepad.h  premake5.lua  tinygamepad.h
.github/workflows/: ci.yml  macos.yml  web.yml  windows.yml
examples/: events.c  gamepadapp.c  gamepadlist.c  gamepadquery.c  gamepadrumble.c  list.c  rgfw_gamepad.c
h/: libevdev-uinput.c
include/: minigamepad.h
src/common/: common.c  common.h  gamepad_name_map.c  sdl_db.c  sdl_db.h
src/iokit/: iokit.c  iokit.h
src/linux/: gamepad_btn_conv.c  linux.c  linux.h  mg_joystick.c  mg_joysticks.c
src/linux/libevdev/: config.h  event-names.h  libevdev-int.h  libevdev-names.c  libevdev-uinput-int.h  libevdev-uinput.c  libevdev-uinput.h  libevdev-util.h  libevdev.c  libevdev.h
src/null/: gamepad_btn_conv.c  null.c  null.h
src/stb/: stb_ds.h
src/windows/: gamepad_name_map.c  mg_windows.h  windows.c  windows.h
src/winmm/: winmm.c  winmm.h
